// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataEntry should match snapshot upon load 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DataEntry />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <button
          className="import-button"
>
          Import CSV
</button>,
        <form
          onSubmit={[Function]}
>
          <h3>
                    Location
          </h3>
          <div
                    className="choose-location"
          >
                    <h4>
                              Choose an existing location:
                    </h4>
                    <DropDown
                              className="drop-down"
                              handleChange={[Function]}
                              name="country"
                              options={Array []}
                    />
                    <DropDown
                              className="drop-down"
                              handleChange={[Function]}
                              name="region"
                              options={Array []}
                    />
                    <DropDown
                              className="drop-down"
                              handleChange={[Function]}
                              name="coordinates"
                              options={Array []}
                    />
          </div>
          <h5>
                    OR
          </h5>
          <button
                    className="add-new-location-button"
                    onClick={[Function]}
                    type="button"
          >
                    Add a New Location
          </button>
          <h3>
                    Data
          </h3>
          <DataForm
                    handleChange={[Function]}
                    handleClick={[Function]}
                    sampleData={
                              Array [
                                        Object {
                                          "date_collected": "",
                                          "name": "",
                                          "reflectance": "",
                                          "wavelength": "",
                                        },
                                      ]
                    }
          />
          <button
                    className="submit-button"
                    type="submit"
          >
                    Save
          </button>
</form>,
      ],
      "className": "DataEntry",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Import CSV",
          "className": "import-button",
        },
        "ref": null,
        "rendered": "Import CSV",
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h3>
              Location
</h3>,
            <div
              className="choose-location"
>
              <h4>
                            Choose an existing location:
              </h4>
              <DropDown
                            className="drop-down"
                            handleChange={[Function]}
                            name="country"
                            options={Array []}
              />
              <DropDown
                            className="drop-down"
                            handleChange={[Function]}
                            name="region"
                            options={Array []}
              />
              <DropDown
                            className="drop-down"
                            handleChange={[Function]}
                            name="coordinates"
                            options={Array []}
              />
</div>,
            false,
            <h5>
              OR
</h5>,
            <button
              className="add-new-location-button"
              onClick={[Function]}
              type="button"
>
              Add a New Location
</button>,
            <h3>
              Data
</h3>,
            <DataForm
              handleChange={[Function]}
              handleClick={[Function]}
              sampleData={
                            Array [
                                          Object {
                                            "date_collected": "",
                                            "name": "",
                                            "reflectance": "",
                                            "wavelength": "",
                                          },
                                        ]
              }
/>,
            <button
              className="submit-button"
              type="submit"
>
              Save
</button>,
          ],
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Location",
            },
            "ref": null,
            "rendered": "Location",
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h4>
                  Choose an existing location:
</h4>,
                <DropDown
                  className="drop-down"
                  handleChange={[Function]}
                  name="country"
                  options={Array []}
/>,
                <DropDown
                  className="drop-down"
                  handleChange={[Function]}
                  name="region"
                  options={Array []}
/>,
                <DropDown
                  className="drop-down"
                  handleChange={[Function]}
                  name="coordinates"
                  options={Array []}
/>,
              ],
              "className": "choose-location",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Choose an existing location:",
                },
                "ref": null,
                "rendered": "Choose an existing location:",
                "type": "h4",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "className": "drop-down",
                  "handleChange": [Function],
                  "name": "country",
                  "options": Array [],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "className": "drop-down",
                  "handleChange": [Function],
                  "name": "region",
                  "options": Array [],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "className": "drop-down",
                  "handleChange": [Function],
                  "name": "coordinates",
                  "options": Array [],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "OR",
            },
            "ref": null,
            "rendered": "OR",
            "type": "h5",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Add a New Location",
              "className": "add-new-location-button",
              "onClick": [Function],
              "type": "button",
            },
            "ref": null,
            "rendered": "Add a New Location",
            "type": "button",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Data",
            },
            "ref": null,
            "rendered": "Data",
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "handleChange": [Function],
              "handleClick": [Function],
              "sampleData": Array [
                Object {
                  "date_collected": "",
                  "name": "",
                  "reflectance": "",
                  "wavelength": "",
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Save",
              "className": "submit-button",
              "type": "submit",
            },
            "ref": null,
            "rendered": "Save",
            "type": "button",
          },
        ],
        "type": "form",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <button
            className="import-button"
>
            Import CSV
</button>,
          <form
            onSubmit={[Function]}
>
            <h3>
                        Location
            </h3>
            <div
                        className="choose-location"
            >
                        <h4>
                                    Choose an existing location:
                        </h4>
                        <DropDown
                                    className="drop-down"
                                    handleChange={[Function]}
                                    name="country"
                                    options={Array []}
                        />
                        <DropDown
                                    className="drop-down"
                                    handleChange={[Function]}
                                    name="region"
                                    options={Array []}
                        />
                        <DropDown
                                    className="drop-down"
                                    handleChange={[Function]}
                                    name="coordinates"
                                    options={Array []}
                        />
            </div>
            <h5>
                        OR
            </h5>
            <button
                        className="add-new-location-button"
                        onClick={[Function]}
                        type="button"
            >
                        Add a New Location
            </button>
            <h3>
                        Data
            </h3>
            <DataForm
                        handleChange={[Function]}
                        handleClick={[Function]}
                        sampleData={
                                    Array [
                                                Object {
                                                  "date_collected": "",
                                                  "name": "",
                                                  "reflectance": "",
                                                  "wavelength": "",
                                                },
                                              ]
                        }
            />
            <button
                        className="submit-button"
                        type="submit"
            >
                        Save
            </button>
</form>,
        ],
        "className": "DataEntry",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Import CSV",
            "className": "import-button",
          },
          "ref": null,
          "rendered": "Import CSV",
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3>
                Location
</h3>,
              <div
                className="choose-location"
>
                <h4>
                                Choose an existing location:
                </h4>
                <DropDown
                                className="drop-down"
                                handleChange={[Function]}
                                name="country"
                                options={Array []}
                />
                <DropDown
                                className="drop-down"
                                handleChange={[Function]}
                                name="region"
                                options={Array []}
                />
                <DropDown
                                className="drop-down"
                                handleChange={[Function]}
                                name="coordinates"
                                options={Array []}
                />
</div>,
              false,
              <h5>
                OR
</h5>,
              <button
                className="add-new-location-button"
                onClick={[Function]}
                type="button"
>
                Add a New Location
</button>,
              <h3>
                Data
</h3>,
              <DataForm
                handleChange={[Function]}
                handleClick={[Function]}
                sampleData={
                                Array [
                                                Object {
                                                  "date_collected": "",
                                                  "name": "",
                                                  "reflectance": "",
                                                  "wavelength": "",
                                                },
                                              ]
                }
/>,
              <button
                className="submit-button"
                type="submit"
>
                Save
</button>,
            ],
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Location",
              },
              "ref": null,
              "rendered": "Location",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h4>
                    Choose an existing location:
</h4>,
                  <DropDown
                    className="drop-down"
                    handleChange={[Function]}
                    name="country"
                    options={Array []}
/>,
                  <DropDown
                    className="drop-down"
                    handleChange={[Function]}
                    name="region"
                    options={Array []}
/>,
                  <DropDown
                    className="drop-down"
                    handleChange={[Function]}
                    name="coordinates"
                    options={Array []}
/>,
                ],
                "className": "choose-location",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Choose an existing location:",
                  },
                  "ref": null,
                  "rendered": "Choose an existing location:",
                  "type": "h4",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "className": "drop-down",
                    "handleChange": [Function],
                    "name": "country",
                    "options": Array [],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "className": "drop-down",
                    "handleChange": [Function],
                    "name": "region",
                    "options": Array [],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "className": "drop-down",
                    "handleChange": [Function],
                    "name": "coordinates",
                    "options": Array [],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "OR",
              },
              "ref": null,
              "rendered": "OR",
              "type": "h5",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Add a New Location",
                "className": "add-new-location-button",
                "onClick": [Function],
                "type": "button",
              },
              "ref": null,
              "rendered": "Add a New Location",
              "type": "button",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Data",
              },
              "ref": null,
              "rendered": "Data",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "handleChange": [Function],
                "handleClick": [Function],
                "sampleData": Array [
                  Object {
                    "date_collected": "",
                    "name": "",
                    "reflectance": "",
                    "wavelength": "",
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Save",
                "className": "submit-button",
                "type": "submit",
              },
              "ref": null,
              "rendered": "Save",
              "type": "button",
            },
          ],
          "type": "form",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`DataEntry should match snapshot with locations 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DataEntry />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <button
          className="import-button"
>
          Import CSV
</button>,
        <form
          onSubmit={[Function]}
>
          <h3>
                    Location
          </h3>
          <div
                    className="choose-location"
          >
                    <h4>
                              Choose an existing location:
                    </h4>
                    <DropDown
                              className="drop-down"
                              handleChange={[Function]}
                              name="country"
                              options={
                                        Array [
                                                  "Argentina",
                                                  "Peru",
                                                ]
                              }
                    />
                    <DropDown
                              className="drop-down"
                              handleChange={[Function]}
                              name="region"
                              options={Array []}
                    />
                    <DropDown
                              className="drop-down"
                              handleChange={[Function]}
                              name="coordinates"
                              options={Array []}
                    />
          </div>
          <h5>
                    OR
          </h5>
          <button
                    className="add-new-location-button"
                    onClick={[Function]}
                    type="button"
          >
                    Add a New Location
          </button>
          <h3>
                    Data
          </h3>
          <DataForm
                    handleChange={[Function]}
                    handleClick={[Function]}
                    sampleData={
                              Array [
                                        Object {
                                          "date_collected": "",
                                          "name": "",
                                          "reflectance": "",
                                          "wavelength": "",
                                        },
                                      ]
                    }
          />
          <button
                    className="submit-button"
                    type="submit"
          >
                    Save
          </button>
</form>,
      ],
      "className": "DataEntry",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Import CSV",
          "className": "import-button",
        },
        "ref": null,
        "rendered": "Import CSV",
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h3>
              Location
</h3>,
            <div
              className="choose-location"
>
              <h4>
                            Choose an existing location:
              </h4>
              <DropDown
                            className="drop-down"
                            handleChange={[Function]}
                            name="country"
                            options={
                                          Array [
                                                        "Argentina",
                                                        "Peru",
                                                      ]
                            }
              />
              <DropDown
                            className="drop-down"
                            handleChange={[Function]}
                            name="region"
                            options={Array []}
              />
              <DropDown
                            className="drop-down"
                            handleChange={[Function]}
                            name="coordinates"
                            options={Array []}
              />
</div>,
            false,
            <h5>
              OR
</h5>,
            <button
              className="add-new-location-button"
              onClick={[Function]}
              type="button"
>
              Add a New Location
</button>,
            <h3>
              Data
</h3>,
            <DataForm
              handleChange={[Function]}
              handleClick={[Function]}
              sampleData={
                            Array [
                                          Object {
                                            "date_collected": "",
                                            "name": "",
                                            "reflectance": "",
                                            "wavelength": "",
                                          },
                                        ]
              }
/>,
            <button
              className="submit-button"
              type="submit"
>
              Save
</button>,
          ],
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Location",
            },
            "ref": null,
            "rendered": "Location",
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h4>
                  Choose an existing location:
</h4>,
                <DropDown
                  className="drop-down"
                  handleChange={[Function]}
                  name="country"
                  options={
                                    Array [
                                                      "Argentina",
                                                      "Peru",
                                                    ]
                  }
/>,
                <DropDown
                  className="drop-down"
                  handleChange={[Function]}
                  name="region"
                  options={Array []}
/>,
                <DropDown
                  className="drop-down"
                  handleChange={[Function]}
                  name="coordinates"
                  options={Array []}
/>,
              ],
              "className": "choose-location",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Choose an existing location:",
                },
                "ref": null,
                "rendered": "Choose an existing location:",
                "type": "h4",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "className": "drop-down",
                  "handleChange": [Function],
                  "name": "country",
                  "options": Array [
                    "Argentina",
                    "Peru",
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "className": "drop-down",
                  "handleChange": [Function],
                  "name": "region",
                  "options": Array [],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "className": "drop-down",
                  "handleChange": [Function],
                  "name": "coordinates",
                  "options": Array [],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "OR",
            },
            "ref": null,
            "rendered": "OR",
            "type": "h5",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Add a New Location",
              "className": "add-new-location-button",
              "onClick": [Function],
              "type": "button",
            },
            "ref": null,
            "rendered": "Add a New Location",
            "type": "button",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Data",
            },
            "ref": null,
            "rendered": "Data",
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "handleChange": [Function],
              "handleClick": [Function],
              "sampleData": Array [
                Object {
                  "date_collected": "",
                  "name": "",
                  "reflectance": "",
                  "wavelength": "",
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Save",
              "className": "submit-button",
              "type": "submit",
            },
            "ref": null,
            "rendered": "Save",
            "type": "button",
          },
        ],
        "type": "form",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <button
            className="import-button"
>
            Import CSV
</button>,
          <form
            onSubmit={[Function]}
>
            <h3>
                        Location
            </h3>
            <div
                        className="choose-location"
            >
                        <h4>
                                    Choose an existing location:
                        </h4>
                        <DropDown
                                    className="drop-down"
                                    handleChange={[Function]}
                                    name="country"
                                    options={
                                                Array [
                                                            "Argentina",
                                                            "Peru",
                                                          ]
                                    }
                        />
                        <DropDown
                                    className="drop-down"
                                    handleChange={[Function]}
                                    name="region"
                                    options={Array []}
                        />
                        <DropDown
                                    className="drop-down"
                                    handleChange={[Function]}
                                    name="coordinates"
                                    options={Array []}
                        />
            </div>
            <h5>
                        OR
            </h5>
            <button
                        className="add-new-location-button"
                        onClick={[Function]}
                        type="button"
            >
                        Add a New Location
            </button>
            <h3>
                        Data
            </h3>
            <DataForm
                        handleChange={[Function]}
                        handleClick={[Function]}
                        sampleData={
                                    Array [
                                                Object {
                                                  "date_collected": "",
                                                  "name": "",
                                                  "reflectance": "",
                                                  "wavelength": "",
                                                },
                                              ]
                        }
            />
            <button
                        className="submit-button"
                        type="submit"
            >
                        Save
            </button>
</form>,
        ],
        "className": "DataEntry",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Import CSV",
            "className": "import-button",
          },
          "ref": null,
          "rendered": "Import CSV",
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3>
                Location
</h3>,
              <div
                className="choose-location"
>
                <h4>
                                Choose an existing location:
                </h4>
                <DropDown
                                className="drop-down"
                                handleChange={[Function]}
                                name="country"
                                options={
                                                Array [
                                                                "Argentina",
                                                                "Peru",
                                                              ]
                                }
                />
                <DropDown
                                className="drop-down"
                                handleChange={[Function]}
                                name="region"
                                options={Array []}
                />
                <DropDown
                                className="drop-down"
                                handleChange={[Function]}
                                name="coordinates"
                                options={Array []}
                />
</div>,
              false,
              <h5>
                OR
</h5>,
              <button
                className="add-new-location-button"
                onClick={[Function]}
                type="button"
>
                Add a New Location
</button>,
              <h3>
                Data
</h3>,
              <DataForm
                handleChange={[Function]}
                handleClick={[Function]}
                sampleData={
                                Array [
                                                Object {
                                                  "date_collected": "",
                                                  "name": "",
                                                  "reflectance": "",
                                                  "wavelength": "",
                                                },
                                              ]
                }
/>,
              <button
                className="submit-button"
                type="submit"
>
                Save
</button>,
            ],
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Location",
              },
              "ref": null,
              "rendered": "Location",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h4>
                    Choose an existing location:
</h4>,
                  <DropDown
                    className="drop-down"
                    handleChange={[Function]}
                    name="country"
                    options={
                                        Array [
                                                            "Argentina",
                                                            "Peru",
                                                          ]
                    }
/>,
                  <DropDown
                    className="drop-down"
                    handleChange={[Function]}
                    name="region"
                    options={Array []}
/>,
                  <DropDown
                    className="drop-down"
                    handleChange={[Function]}
                    name="coordinates"
                    options={Array []}
/>,
                ],
                "className": "choose-location",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Choose an existing location:",
                  },
                  "ref": null,
                  "rendered": "Choose an existing location:",
                  "type": "h4",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "className": "drop-down",
                    "handleChange": [Function],
                    "name": "country",
                    "options": Array [
                      "Argentina",
                      "Peru",
                    ],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "className": "drop-down",
                    "handleChange": [Function],
                    "name": "region",
                    "options": Array [],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "className": "drop-down",
                    "handleChange": [Function],
                    "name": "coordinates",
                    "options": Array [],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "OR",
              },
              "ref": null,
              "rendered": "OR",
              "type": "h5",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Add a New Location",
                "className": "add-new-location-button",
                "onClick": [Function],
                "type": "button",
              },
              "ref": null,
              "rendered": "Add a New Location",
              "type": "button",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Data",
              },
              "ref": null,
              "rendered": "Data",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "handleChange": [Function],
                "handleClick": [Function],
                "sampleData": Array [
                  Object {
                    "date_collected": "",
                    "name": "",
                    "reflectance": "",
                    "wavelength": "",
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Save",
                "className": "submit-button",
                "type": "submit",
              },
              "ref": null,
              "rendered": "Save",
              "type": "button",
            },
          ],
          "type": "form",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;
